--- a/ssm3-web/src/main/webapp/WEB-INF/web.xml
+++ b/ssm3-web/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 
     <display-name>ssm3</display-name>
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/spring/applicationContext.xml</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>springMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
