--- a/ssm3-web/pom.xml
+++ b/ssm3-web/pom.xml
@@ -24,6 +24,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.zhiang</groupId>
+            <artifactId>ssm3-dao</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
