--- a/ssm3-web/src/main/webapp/WEB-INF/web.xml
+++ b/ssm3-web/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring/applicationContext.xml</param-value>
+        <param-value>/WEB-INF/spring111/applicationContext.xml1</param-value>
     </context-param>
 
     <servlet>
