--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>2.5.3</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.zhiang</groupId>
                 <artifactId>ssm3-dao</artifactId>
                 <version>1.0-SNAPSHOT</version>
